# tailops

./: CHANGELOG.md  INSTALL.md  LICENSE  MANIFEST.in  PYPI_DISTRIBUTION.md  README.md  cli.py  pyproject.toml  requirements.txt
config/: tenants.yaml
tailops/: __init__.py  api.py  config.py  secrets.py
tailops.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tailops/commands/: __init__.py  device.py  key.py  secrets.py  tenant.py
tailops/utils/: __init__.py  formatter.py  output.py
